Añadida tarjeta interactiva en página 5 con efecto de giro y enlaces en el reverso

--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta etiquetas básicas -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio de Betto R., desarrollador frontend con experiencia en React, Laravel, Node.js, GSAP y Swiper.js.">
+    <meta name="author" content="Betto R.">
+    <meta name="keywords" content="Frontend Developer, React, Laravel, Node.js, GSAP, Swiper.js, Desarrollo Web, Portafolio">
+
+    <!-- Meta etiquetas para redes sociales -->
+    <meta property="og:title" content="Betto R. - Frontend Developer">
+    <meta property="og:description" content="Portafolio de Betto R., desarrollador frontend con experiencia en tecnologías modernas.">
+    <meta property="og:image" content="Image/logo/Logo noche.png">
+    <meta property="og:url" content="https://startling-sundae-fc9c22.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Betto R. - Frontend Developer">
+    <meta name="twitter:description" content="Portafolio de Betto R., desarrollador frontend con experiencia en tecnologías modernas.">
+    <meta name="twitter:image" content="Image/logo/Logo noche.png">
+
+    <!-- Título de la página -->
     <title>BettoR.</title>
+
+    <!-- Enlaces a hojas de estilo -->
     <link rel="stylesheet" href="estilos/styles.css">
+    <link rel="stylesheet" href="Normalize/normalize.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
@@ -28,24 +48,204 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <h1>Página 2</h1>
-                <p>Este es el contenido de la segunda página.</p>
-                <img src="ruta/a/imagen2.jpg" alt="Imagen de la página 2">
+                <div class="pagina-2">
+                    <h1>Proyectos Destacados</h1>
+                    <ul class="proyectos-lista">
+                        <li>
+                            <a href="https://3etop.github.io/films/index.html" target="_blank">
+                                <img src="Image/imagenes de proyectos/Alpataco Films.png" alt="Imagen del proyecto 1" class="proyecto-imagen">
+                            </a>
+                            <div class="proyecto-texto">
+                                <h2>Alpataco Films</h2>
+                                <p>Un proyecto que muestra un sitio web moderno para una productora de cine.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="https://barbershop.p.goit.global/" target="_blank">
+                                <img src="Image/imagenes de proyectos/Barbershop.png" alt="Imagen del proyecto 2" class="proyecto-imagen">
+                            </a>
+                            <div class="proyecto-texto">
+                                <h2>Barber Shop</h2>
+                                <p>Un proyecto que muestra una página web moderna para una barbería..</p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="https://teal-sorbet-174a5d.netlify.app/" target="_blank">
+                                <img src="Image/imagenes de proyectos/Conversor de monedas-httpsteal-sorbet-174a5d.netlify.app.png" alt="Imagen del proyecto 2" class="proyecto-imagen">
+                            </a>
+                            <div class="proyecto-texto">
+                                <h2>Conversor de Moneda</h2>
+                                <p>Un proyecto que muestra una app de cambio de moneda.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="swiper-slide">
-                <h1>Página 3</h1>
-                <p>Este es el contenido de la tercera página.</p>
-                <img src="ruta/a/imagen3.jpg" alt="Imagen de la página 3">
+                <div class="pagina-3">
+                    <h1>Habilidades Técnicas</h1>
+                    <div class="habilidades-grid">
+                        <figure>
+                            <img src="Image/iconos/Html_9_11zon.webp" alt="Habilidad 1" class="habilidad-imagen">
+                            <figcaption>HTML</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/CSS_4_11zon.webp" alt="Habilidad 2" class="habilidad-imagen">
+                            <figcaption>CSS</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/Javascript_11_11zon.webp" alt="Habilidad 3" class="habilidad-imagen">
+                            <figcaption>Javascript</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/React.svg_14_11zon.webp" alt="Habilidad 4" class="habilidad-imagen">
+                            <figcaption>React</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/Python.svg_13_11zon.webp" alt="Habilidad 5" class="habilidad-imagen">
+                            <figcaption>Python</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/PHP-logo.svg_12_11zon.webp" alt="Habilidad 6" class="habilidad-imagen">
+                            <figcaption>PHP</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/Java_10_11zon.webp" alt="Habilidad 7" class="habilidad-imagen">
+                            <figcaption>Java</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/Github_6_11zon.webp" alt="Habilidad 8" class="habilidad-imagen">
+                            <figcaption>GitHub</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/Git_icon.svg_5_11zon.webp" alt="Habilidad 9" class="habilidad-imagen">
+                            <figcaption>Git</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/google analitycs_7_11zon.webp" alt="Habilidad 10" class="habilidad-imagen">
+                            <figcaption>Google Analytics</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/Hostinger_8_11zon.webp" alt="Habilidad 11" class="habilidad-imagen">
+                            <figcaption>Hostinger</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="Image/iconos/Bootstrap_logo.svg_3_11zon.webp" alt="Habilidad 12" class="habilidad-imagen">
+                            <figcaption>Bootstrap</figcaption>
+                        </figure>
+                    </div>
+                </div>
             </div>
             <div class="swiper-slide">
-                <h1>Página 4</h1>
-                <p>Este es el contenido de la cuarta página.</p>
-                <img src="ruta/a/imagen4.jpg" alt="Imagen de la página 4">
+                <div class="pagina-4">
+                    <h1>Experiencia y Formación</h1>
+                    <ul>
+                        <li>Experiencia práctica y teórica.</li>
+                        <li>Comprensión profunda de conceptos.</li>
+                        <li>Habilidades en programación y desarrollo web.</li>
+                        <li>Trabajo en equipo y gestión de proyectos.</li>
+                        <li>Capacidad de aprendizaje continuo.</li>
+                        <li>Adaptabilidad a nuevas tecnologías.</li>
+                        <li>Resolución de problemas y pensamiento lógico.</li>
+                    </ul>
+                    <div class="carousel">
+                        <div class="carousel-wrapper">
+                            <div class="carousel-images">
+                                <figure>
+                                    <img src="Image/certificados/utp habilidades de programacion con énfasis en Desarrollo web_15.webp" alt="Imagen 1">
+                                    <figcaption>Imagen 1</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/utp diplomado en programación básica en java_14.webp" alt="Imagen 2">
+                                    <figcaption>Imagen 2</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/utp diplomado en fundamentos de programacion en python_13_11zon.webp" alt="Imagen 3">
+                                    <figcaption>Imagen 3</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/utp diplomado en desarrollo de software_12_11zon.webp" alt="Imagen 4">
+                                    <figcaption>Imagen 4</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 2_1_11zon.webp" alt="Imagen 5">
+                                    <figcaption>Imagen 5</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 2_1_11zon.webp" alt="Imagen 6">
+                                    <figcaption>Imagen 6</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 3_2_11zon.webp" alt="Imagen 7">
+                                    <figcaption>Imagen 7</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 4_3_11zon.webp" alt="Imagen 8">
+                                    <figcaption>Imagen 8</figcaption>   
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 5_4_11zon.webp" alt="Imagen 9">
+                                    <figcaption>Imagen 9</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 6_5_11zon.webp" alt="Imagen 10">
+                                    <figcaption>Imagen 10</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 7_6_11zon.webp" alt="Imagen 11">
+                                    <figcaption>Imagen 11</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 8_7_11zon.webp" alt="Imagen 12">
+                                    <figcaption>Imagen 12</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 9_8_11zon.webp" alt="Imagen 13">
+                                    <figcaption>Imagen 13</figcaption>
+                                </figure>   
+                                <figure>
+                                    <img src="Image/certificados/alura latam 10_9_11zon.webp" alt="Imagen 14">
+                                    <figcaption>Imagen 14</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 11_10_11zon.webp" alt="Imagen 15">
+                                    <figcaption>Imagen 15</figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="Image/certificados/alura latam 12_11_11zon.webp" alt="Imagen 16">
+                                    <figcaption>Imagen 16</figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                        <button class="carousel-prev">❮</button>
+                        <button class="carousel-next">❯</button>
+                    </div>
+                </div>
             </div>
             <div class="swiper-slide">
-                <h1>Página 5</h1>
-                <p>Este es el contenido de la quinta página.</p>
-                <img src="ruta/a/imagen5.jpg" alt="Imagen de la página 5">
+                <div class="pagina-5">
+                    <h1>Tarjeta Interactiva</h1>
+                    <div class="card-container">
+                        <div class="card">
+                            <div class="card-front">
+                                <img src="Image/Imagenes/Beto_20_11zon.webp" alt="Frontal de la tarjeta">
+                            </div>
+                            <div class="card-back">
+                                <div class="card-links">
+                                    <a href="https://github.com/3etop" target="_blank">
+                                        <img src="Image/iconos/Github_6_11zon.webp" alt="GitHub">
+                                    </a>
+                                    <a href="https://www.linkedin.com/in/betto-r/" target="_blank">
+                                        <img src="Image/iconos/LinkedIn.webp" alt="LinkedIn">
+                                    </a>
+                                    <a href="https://twitter.com/3etop" target="_blank">
+                                        <img src="Image/iconos/Twitter.webp" alt="Twitter">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Botones personalizados -->
@@ -54,6 +254,14 @@
         <!-- Paginación -->
         <div class="swiper-pagination"></div>
     </div>
+
+    <!-- Modal para mostrar imagen ampliada -->
+    <div class="modal" id="image-modal">
+        <span class="modal-close">&times;</span>
+        <img class="modal-content" id="modal-image">
+        <div id="modal-caption"></div>
+    </div>
+
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/index.js"></script>
 </body>
