Actualización de index.html: mejoras en meta etiquetas y estructura del portafolio

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <meta name="twitter:description" content="Portafolio de Betto R., desarrollador frontend con experiencia en tecnologías modernas.">
     <meta name="twitter:image" content="Image/logo/Logo noche.png">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="Image/Imagenes/Icono Blanco.png">
+
     <!-- Título de la página -->
     <title>BettoR.</title>
 
@@ -26,6 +29,16 @@
     <link rel="stylesheet" href="estilos/styles.css">
     <link rel="stylesheet" href="Normalize/normalize.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6WLFN4WPB9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-6WLFN4WPB9');
+    </script>
 </head>
 <body>
     <header>
@@ -224,23 +237,25 @@
             </div>
             <div class="swiper-slide">
                 <div class="pagina-5">
-                    <h1>Tarjeta Interactiva</h1>
+                    <h1>Contáctame</h1>
                     <div class="card-container">
                         <div class="card">
                             <div class="card-front">
-                                <img src="Image/Imagenes/Beto_20_11zon.webp" alt="Frontal de la tarjeta">
+                                <img src="Image/Imagenes/Logo_7-removebg-preview-removebg-preview.png" alt="Frontal de la tarjeta">
                             </div>
                             <div class="card-back">
-                                <div class="card-links">
-                                    <a href="https://github.com/3etop" target="_blank">
-                                        <img src="Image/iconos/Github_6_11zon.webp" alt="GitHub">
-                                    </a>
-                                    <a href="https://www.linkedin.com/in/betto-r/" target="_blank">
-                                        <img src="Image/iconos/LinkedIn.webp" alt="LinkedIn">
-                                    </a>
-                                    <a href="https://twitter.com/3etop" target="_blank">
-                                        <img src="Image/iconos/Twitter.webp" alt="Twitter">
-                                    </a>
+                                <div class="left-section">
+                                    <img src="Image/Imagenes/Logo_5-removebg-preview.png" alt="Imagen 1">
+                                    <img src="Image/QR/QR.png" alt="Imagen 2">
+                                </div>
+                                <div class="divider"></div>
+                                <div class="right-section">
+                                    <div class="links">
+                                        <a href="tel:3125338978" target="_blank"><i class="bi bi-phone"></i>  312 533 89 78</a>
+                                        <a href="mailto:3etop5958@gmail.com" target="_blank"></i>  3etop5958@gmail.com</a>
+                                        <a href="https://api.whatsapp.com/send?phone=3125338978&text=Hola! me gustaría chatear contigo." target="_blank"><i class="bi bi-whatsapp"></i>  Whatsaap</a>
+                                        <a href="https://www.instagram.com/3etop/" target="_blank"><i class="bi bi-instagram"></i>  Instagram</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
