Actualización de estilos en .card-back, ajustes en diseño responsivo y mejoras generales

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 <div class="right-section">
                                     <div class="links">
                                         <a href="tel:3125338978" target="_blank"><i class="bi bi-phone"></i>  312 533 89 78</a>
-                                        <a href="mailto:3etop5958@gmail.com" target="_blank"></i>  3etop5958@gmail.com</a>
+                                        <a href="mailto:3etop5958@gmail.com" target="_blank"><i class="bi bi-envelope"></i>  3etop5958@gmail.com</a>
                                         <a href="https://api.whatsapp.com/send?phone=3125338978&text=Hola! me gustaría chatear contigo." target="_blank"><i class="bi bi-whatsapp"></i>  Whatsaap</a>
                                         <a href="https://www.instagram.com/3etop/" target="_blank"><i class="bi bi-instagram"></i>  Instagram</a>
                                     </div>
